# docker-acarshub

./: .dictionary.txt  .dockerignore  .env  .env.example  .eslintignore  .eslintrc  .flake8  .gitattributes  .gitignore  .npmrc  .pre-commit-config.yaml  .stylelintrc.json  AGENTS.md  AIRCRAFT_SIDEBAR_DEBUG.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Changelog.MD  DEV-QUICK-START.md  DEVELOPMENT.md  DecoderPlugin.ts  DecoderPluginInterface.ts  Dockerfile  Dockerfile.acars-decoder-typescript  Dockerfile.acarshub  Dockerfile.acarshub-typescript  Dockerfile.develop  Dockerfile.e2e  Dockerfile.local  Dockerfile.nextgen  ENV_SETUP.md  MessageDecoder.ts  Node.Dockerfile  README-dockerhub.md  README.md  SUBTREES.md  Setting-Up-ACARSHub.MD  TODO.md  acarshub-db-repair.sh  aircraft.json  (+33 more)
.github/: FUNDING.yml  dependabot.yaml
.github/workflows/: 4v_deploy.yml  4v_deploy_bleeding_edge.yml  cancel_dupes.yml  codeql-analysis.yml  combine_prs.yml  dependabot.yaml  deploy.yml  deploy_4vtest.yml  deploy_testing.yml  deploy_trixie.yml  e2e.yml  fullstack-e2e.yml  lint.yaml  linting.yml  pre-commit-updates.yaml  sync-readme.yml  test-build.yml  test-pr build.yml  test-pr.yml  tests.yml  update-airframes-data.yaml  update-fir-boundaries.yaml  update-flakes.yaml  update-sprites.yaml  update-tracon-boundaries.yaml
Logo-Sources/: ACARS Hub (2).ai  ACARS Hub.ai
acars-decoder-typescript/: package.json  tsconfig.json
acars-decoder-typescript/.github/: FUNDING.yml
acars-decoder-typescript/lib/: DecoderPlugin.ts  IcaoDecoder.ts  MessageDecoder.ts
acarshub-backend/: .gitignore  README.md  drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts
acarshub-backend/drizzle/: 0000_small_lester.sql  0000_unknown_phalanx.sql  0001_add_timeseries_stats.sql
acarshub-backend/scripts/: generate-test-rrd.ts  seed-test-db.ts
acarshub-backend/src/: config.ts  server.ts  startup-state.ts  test-setup.ts
acarshub-react/: .gitignore  ACCESSIBILITY_AUDIT.md  ATTRIBUTIONS.md  MOBILE-FIRST-CHECKLIST.md  PHASE-2-COMPLETE.md  README.md  SEARCH_FUNCTIONALITY.md  eslint.config.js  index.html  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  playwright.integration.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
acarshub-react/e2e/: README-A11Y-PERFORMANCE.md  README.md  accessibility.spec.ts  alerts.spec.ts  live-map.spec.ts  live-messages.spec.ts  locale-timezone.spec.ts  message-cards.spec.ts  mobile-flows.spec.ts  reconnection.spec.ts  search.spec.ts  settings-persistence.spec.ts  settings-sound-alerts.spec.ts  smoke.spec.ts  stats.spec.ts  touch-targets.spec.ts
acarshub-react/scripts/: generate-colored-sprites.ts
acarshub-react/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
acarshub-types/: .gitignore  README.md  package.json  tsconfig.json
acarshub-types/src/: adsb.ts  index.ts  messages.ts  search.ts  socket.ts  system.ts
acarshub-typescript/: build.sh  copy_test_assets.sh  external_data_sources.sh  installer.sh  minifer.sh  package-lock.json  package.json  rename_files.py  tsconfig.json  webpack.config.js
agent-docs/: ADSB_ACARS_PAIRING.md  ADSB_DATA_FLOW_REFACTOR.md  ALERT_MATCHING_REFACTOR.md  ALERT_REFACTOR_PROGRESS.md  BACKEND_MIGRATION_ANALYSIS.md  BACKEND_MIGRATION_NODEJS.md  CATPPUCCIN.md  CONTEXT_HANDOFF.md  DATABASE_BLOAT_AND_OPTIMIZATION.md  DB_OPTIMIZATION.md  DECODER_CONNECTIONS.md  DECODER_FEATURES.md  DESIGN_LANGUAGE.md  FEATURES.md  FTS_ALEMBIC_INTEGRATION.md  GEOJSON_OVERLAYS_PLAN.md  ICAO_HEX_STORAGE_MIGRATION.md  LOGGING.md  MEMORY_OPTIMIZATION.md  MESSAGE_GROUPS_AND_CULLING.md  MESSAGE_RING_BUFFER.md  MIGRATION_204_BUGFIX.md  PAUSE_FUNCTIONALITY.md  PHASE_10_11_SUMMARY.md  PHASE_10_1_COMPLETE.md  PHASE_10_1_TESTING_SETUP.md  PHASE_10_2_COMPLETE.md  PHASE_10_2_KICKOFF.md  PHASE_10_2_MESSAGECARD_FIXES.md  PHASE_10_2_PROGRESS.md  PHASE_10_2_SETTINGSMODAL_PROGRESS.md  PHASE_11_DECISION_SUMMARY.md  PHASE_15_DAY1_SUMMARY.md  PHASE_15_DAY2_ADSB_CULLING.md  PHASE_15_DAY2_SUMMARY.md  PHASE_15_DAY3_DENSITY_REMOVAL.md  PHASE_15_KICKOFF.md  PHASE_15_QUICK_FIXES.md  REMEDIATION_PLAN.md  SEARCH_FUNCTIONALITY.md  (+3 more)
dev-docs/: API_PARITY.md  BACKEND_SETUP_DECISIONS.md  CODING_STANDARDS.md  CONTRIBUTING.md  DATABASE_OPTIMIZATION_V4.md  ENV_VARS_AUDIT.md  NODEJS_MIGRATION_PLAN.md  PYTHON_DEPENDENCIES.md  README.md  SETUP.md  TESTING_AUDIT.md  TESTING_GUIDE.md  TIMESERIES_STRATEGY.md  TROUBLESHOOTING.md  TROUBLESHOOTING_V4.md  TYPESCRIPT_CHECKING.md  V4_DATABASE_SUMMARY.md  V4_DEPLOYMENT_CHECKLIST.md  WHATS_NEW_V4.md
docs/: PHASE_14_DEPLOYMENT.md  Pre-Commit-Hooks.MD  SUBTREES.md  contributing.MD  dev-enviornment-setup.MD  external-js-css-versions.MD  ts-setup.MD
grafana/: grafana-dashboard.json
lib/: DecoderPlugin.ts  DecoderPluginInterface.ts  MessageDecoder.ts
lib/plugins/: LabelSQ.ts  (+18 more)
plugins/: Label15.ts  Label80.ts  LabelH1_M1BPOS.ts  LabelSQ.ts  official.ts
retired_scripts/: buildx-withcache.sh  buildx.sh  line_trim.sh  log_check.sh  test_line_trim.sh
rust/acarshub/: Cargo.toml
rust/acarshub-database/: Cargo.toml
rust/acarshub-database/migrations/2025-05-21-193710_rename_columns/: down.sql
rust/acarshub-database/src/: db_listener.rs  lib.rs  models.rs  schema.rs
rust/acarshub-message-processing/: Cargo.toml
rust/acarshub-message-processing/src/: lib.rs
rust/acarshub/src/: main.rs
rust/acarshub_message_processing/: Cargo.toml
rust/acarshub_message_processing/src/: lib.rs
rust/libraries/acarshub_common/: Cargo.toml
rust/libraries/acarshub_common/src/: lib.rs
rust/libraries/acarshub_database/: Cargo.toml
rust/libraries/acarshub_database/src/: db_listener.rs
rust/libraries/acarshub_message_processing/: Cargo.toml
rust/libraries/acarshub_settings/: Cargo.toml
rust/libraries/acarshub_webserver/: Cargo.toml
rust/libraries/acarshub_webserver/src/: lib.rs
scripts/: line_trim.sh
test-fixtures/: seed.db  seed.db.meta.json  test.rrd  test.rrd.meta.json
tools/: aboutpagegenerator.py  bump-versions.py  healthtest.sh  spammer.py  update_local_dev_packages.sh  update_local_pip.sh
(+645 files in other folders)
