[workspace]
members = [
    "./rust/acarshub",
    "./rust/acarshub-database",
    "./rust/acarshub-message-processing",
    "./rust/acarshub-settings",
    "./rust/acarshub-webserver",
]
resolver = "3"

[workspace.package]
version = "5.0.0"
edition = "2024"

[workspace.dependencies]
acars_vdlm2_parser = { git = "https://github.com/jcdeimos/acars_vdlm2_parser", version = "0.4.0" }
anyhow = "1.0.98"
axum = "0.8.4"
acarshub-database = { path = "./rust/acarshub-database" }
clap = { version = "4.5.38", features = ["derive", "env"] }
diesel = { version = "2.2.10", features = ["sqlite", "64-column-tables"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.33.0", features = ["bundled"] }
parking_lot = "0.12.3"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "parking_lot",
] }
