[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-acarshub"
description = "acarshub"
version = "3.14.0"
dependencies = [
"django==6.0.1",
"Flask==3.1.2",
"Flask-SocketIO==5.6.0",
"gevent==25.9.1",
"gunicorn[gevent]==24.1.1",
"prometheus-client==0.24.1",
"requests==2.32.5",
"schedule==1.2.2",
"sqlalchemy==2.0.46",
"rrdtool @ git+https://github.com/fredclausen/python-rrdtool.git",
]

[tool.setuptools.package-dir]
"" = "rootfs/webapp"
