[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-acarshub"
description = "acarshub"
version = "4.0.1"
dependencies = [
    "django==6.0.2",
    "Flask==3.1.2",
    "Flask-SocketIO==5.6.0",
    "gevent==25.9.1",
    "gunicorn[gevent]==25.1.0",
    "prometheus-client==0.24.1",
    "requests==2.32.5",
    "schedule==1.2.2",
    "sqlalchemy==2.0.46",
    "rrdtool @ git+https://github.com/fredclausen/python-rrdtool.git",
    "alembic==1.18.4",
]

[tool.setuptools.package-dir]
"" = "rootfs/webapp"

[tool.pdm.scripts]
# Development scripts
dev = { cmd = "python run_dev.py" }
dev-backend = { cmd = "python run_dev.py" }
dev-watch-frontend = { shell = "cd acarshub-typescript && npm run watch" }
dev-full = { composite = ["dev-watch-frontend", "dev-backend"] }

# Frontend build scripts
build-frontend = { shell = "cd acarshub-typescript && npm run build" }
build-frontend-dev = { shell = "cd acarshub-typescript && npm run build-dev" }
watch-frontend = { shell = "./dev-watch.sh" }

# Install frontend dependencies
install-frontend = { shell = "cd acarshub-typescript && npm install" }
