[package]
name = "acarshub-database"
version = "2.0.0"
edition.workspace = true

[dependencies]
acars_vdlm2_parser.workspace = true
anyhow.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
libsqlite3-sys.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tracing.workspace = true
