[package]
name = "acarshub-message-processing"
version.workspace = true
edition.workspace = true

[dependencies]
acars_vdlm2_parser.workspace = true
acarshub-database = { path = "../acarshub-database" }
anyhow.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tracing.workspace = true
