[package]
name = "acarshub"
version.workspace = true
edition.workspace = true

[dependencies]
acarshub-database = { path = "../acarshub-database" }
acarshub-settings = { path = "../acarshub-settings" }
acarshub-webserver = { path = "../acarshub-webserver" }
acarshub-message-processing = { path = "../acarshub-message-processing" }
parking_lot.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
