[package]
name = "acarshub"
version.workspace = true
edition.workspace = true

[dependencies]
acarshub_database = { path = "../acarshub_database" }
acarshub_settings = { path = "../acarshub_settings" }
acarshub_webserver = { path = "../acarshub_webserver" }
acarshub_message_processing = { path = "../acarshub_message_processing" }
parking_lot.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
