[package]
name = "acarshub_message_processing"
version.workspace = true
edition.workspace = true

[dependencies]
acars_vdlm2_parser.workspace = true
acarshub_common = { path = "../acarshub_common" }
acarshub_database = { path = "../acarshub_database" }
anyhow.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tracing.workspace = true
