[package]
name = "acarshub_database"
version = "2.0.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
acars_vdlm2_parser.workspace = true
acarshub_common.workspace = true
anyhow.workspace = true
conv.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
libsqlite3-sys.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tracing.workspace = true
