[package]
name = "acarshub_settings"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
acarshub_common.workspace = true
acarshub_message_processing.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
