[package]
name = "acarshub_webserver"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
acarshub_database.workspace = true
anyhow.workspace = true
axum.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tracing.workspace = true
